jaeger/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jaeger
  name: jaeger
  namespace: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "16686"
    spec:
      containers:
        - image: jaegertracing/all-in-one:1.18
          args:
            - --query.base-path=/jaeger
          name: jaeger
          ports:
            - containerPort: 14268
              name: collection
            - containerPort: 16686
              name: ui
          readinessProbe:
            httpGet:
              path: "/"
              port: 14269
            initialDelaySeconds: 5
