jaeger/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  namespace: jaeger
spec:
  rules:
    - http:
        paths:
          - path: /jaeger
            backend:
              serviceName: jaeger
              servicePort: 16686
